# opengl_template

./: .gitignore  CMakeLists.txt  README.MD
src/: CMakeLists.txt  app.cpp  main.cpp
src/include/: app.h  linmath.h  stdafx.h
